error with django.contrib.markup

--- a/home/templates/meta.html
+++ b/home/templates/meta.html
@@ -3,5 +3,5 @@
 <meta name="description" content="{{ META.description }}"/>
 <meta name="keywords" content="{{ META.keywords }}"/>
 <meta name="author" content="{{ META.author }}" />
-<link rel="stylesheet" type="text/css" href="{% static 'home/css/default.css' %}" media="screen"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/default.css' %}" media="screen"/>
 <title>{{ pagetitle }}</title>
