--- a/home/templates/subnav.html
+++ b/home/templates/subnav.html
@@ -1,7 +1,8 @@
 {% load static from staticfiles %}
+{
 
 <h1>About me</h1>
-<img id="me-photo" src="{% static 'home/img/me.png' %}" alt="me">
+<img id="me-photo" src="{% static 'img/me.png' %}" alt="me">
 <p> If I must..</p>
 <p>I am lazy, a miser.  Much like Shikamaru Nara, except without the genius part.
 </p>
