--- a/home/templates/single_column.html
+++ b/home/templates/single_column.html
@@ -1,23 +1,19 @@
-{% extends "base.html" %}
+{% extends "base_single.html" %}
 {% load static from staticfiles %}
 
 {% block meta-block %}
 {% include "meta.html" %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/default.css' %}" media="screen"/>
+<link rel="stylesheet" type="text/css" href="{% static 'css/single.css' %}" media="screen"/>
 <title>{{ pagetitle }}</title>
 {% endblock %}
-
 
 {% block navbar-block %}
 {% include "nav.html" %}
 {% endblock %}
 
 {% block content %}
-{% include "content.html" %}
-{% endblock %}
-
-{% block subnav %}
-{% include "subnav.html" %}
+{% include "content_full.html" %}
 {% endblock %}
 
 {% block footer %}
