--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -12,6 +12,9 @@
     {% endfor %}
 {% endfor %}
 
+
+<img src="http://media.azuer88.org/webhome/306.gif">
+
 <h1>Porttitor posuere</h1>
 <div class="descr">Jun 13, 2006 by Vulputate</div>
 
